K/kubemod-pSYXhNYHLEq6/kubemod.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kubemod-webapp-service
  labels:
    helm.sh/chart: kubemod-0.3.0
    app.kubernetes.io/name: kubemod
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.13.0
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 8081
      targetPort: api
    - name: metrics
      port: 8082
      targetPort: metrics
    - name: health
      port: 8083
      targetPort: health
  selector:
    app.kubernetes.io/name: kubemod
    app.kubernetes.io/instance: release-name
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-kubemod-webhook-service
  labels:
    helm.sh/chart: kubemod-0.3.0
    app.kubernetes.io/name: kubemod
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.13.0
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 9443
  selector:
    app.kubernetes.io/name: kubemod
    app.kubernetes.io/instance: release-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-kubemod
  labels:
    helm.sh/chart: kubemod-0.3.0
    app.kubernetes.io/name: kubemod
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.13.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubemod
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubemod
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-kubemod
      securityContext: {}
      containers:
        - name: kubemod
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                "": NET_RAW
            readOnlyRootFilesystem: true
          image: kubemod/kubemod:v0.13.0
          imagePullPolicy: IfNotPresent
          command:
            - /kubemod
            - -operator
            - -webapp
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8083
          ports:
            - containerPort: 8081
              name: api
              protocol: TCP
            - containerPort: 8082
              name: metrics
              protocol: TCP
            - containerPort: 8083
              name: health
              protocol: TCP
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8083
          resources:
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: webhook-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-kubemod-mutating-webhook-configuration
  labels:
    helm.sh/chart: kubemod-0.3.0
    app.kubernetes.io/name: kubemod
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.13.0
    app.kubernetes.io/managed-by: Helm
  creationTimestamp: null
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: Cg==
      service:
        name: release-name-kubemod-webhook-service
        namespace: default
        path: /mutate-api-kubemod-io-v1beta1-modrule
    failurePolicy: Fail
    name: mmodrule.kubemod.io
    rules:
      - apiGroups:
          - api.kubemod.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - modrules
    sideEffects: None
    timeoutSeconds: 5
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: Cg==
      service:
        name: release-name-kubemod-webhook-service
        namespace: default
        path: /dragnet-webhook
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: dragnet.kubemod.io
    namespaceSelector:
      matchExpressions:
        - key: admission.kubemod.io/ignore
          operator: NotIn
          values:
            - "true"
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups:
          - '*'
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - namespaces
          - nodes
          - configmaps
          - persistentvolumeclaims
          - persistentvolumes
          - secrets
          - services
          - daemonsets
          - deployments
          - replicasets
          - statefulsets
          - horizontalpodautoscalers
          - ingresses
          - pods
          - cronjobs
          - jobs
          - serviceaccounts
          - clusterrolebindings
          - clusterroles
          - rolebindings
          - roles
        scope: '*'
    sideEffects: None
    timeoutSeconds: 3
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: release-name-kubemod-validating-webhook-configuration
  labels:
    helm.sh/chart: kubemod-0.3.0
    app.kubernetes.io/name: kubemod
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 0.13.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: Cg==
      service:
        name: release-name-kubemod-webhook-service
        namespace: default
        path: /validate-api-kubemod-io-v1beta1-modrule
    failurePolicy: Fail
    name: vmodrule.kubemod.io
    rules:
      - apiGroups:
          - api.kubemod.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - modrules
    sideEffects: None
    timeoutSeconds: 5
